FKDK-1066 Fix vertical alignment on slider

--- a/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_fic/src/scss/custom/components/_fic-header-banners.scss
@@ -262,11 +262,16 @@ $desktop-margin-default: 30px;
       .cycle-slideshow {
         display: flex;
         justify-content: center;
+        align-items: center;
         width: 100% !important;
+        height: auto !important;
 
         .cycle-slide {
           background-color: transparent !important;
-          width: 100%
+          width: 100% !important;
+          top: auto !important;
+          bottom: auto !important;
+          height: auto !important;
         }
 
       }
